--- a/revalida-shopping-app/src/index.html
+++ b/revalida-shopping-app/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"></head>
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@9.1.0/dist/style.css" rel="stylesheet" type="text/css">
   <!-- <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" /> -->
-  <link href="https://cdn.datatables.net/v/dt/dt-2.1.5/datatables.min.css" rel="stylesheet">
+  <!-- <link href="https://cdn.datatables.net/v/dt/dt-2.1.5/datatables.min.css" rel="stylesheet"> -->
   <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 <body>
   <app-root></app-root>
@@ -21,13 +21,7 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script> -->
   
-  <script type="text/javascript" class="init">
-    $(document).ready(function() {
-      console.log("datatable")
-      console.log($('#myTable').contents())
-      $('#myTable').DataTable();
-    });
-  </script>
+  
   <!-- <script src="js/scripts.js"></script> -->
   <!-- <script src="assets/demo/chart-area-demo.js"></script> -->
   <!-- <script src="assets/demo/chart-bar-demo.js"></script> -->
