Updated products table, added form modals

--- a/revalida-shopping-app/src/index.html
+++ b/revalida-shopping-app/src/index.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@9.1.0/dist/style.css" rel="stylesheet" type="text/css">
   <!-- <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" /> -->
   <!-- <link href="https://cdn.datatables.net/v/dt/dt-2.1.5/datatables.min.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 <body>
   <app-root></app-root>
